<resources>
    <string name="app_name">Rowdy Vpn</string>

    <string name="Admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="privacy_policy_link">https://pages.flycricket.io/vpn-365/privacy.html</string>
    <string name="developer_email">testdemo@gmail.com</string>
    <string name="app_version">1.0v</string>

    <!--Set Your Pricing-->
    <string name="vip_price_month">$2.59</string>
    <string name="vip_price_3month">$3.99</string>
    <string name="vip_price_6month">$6.49</string>
    <string name="vip_price_12month">$8.49</string>

    <string name="settings">Settings</string>
    <string name="speed">Speed Meter</string>
    <string name="history">History</string>

    <string name="date_format">mm/dd/yyyy HH:mm</string>
    <string name="rating_dialog">Do you like VPN 365?</string>

    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="disconnected">Disconnected</string>
    <string name="max_cloud">VPN 365</string>
    <string name="premium">PREMIUM</string>
    <string name="congratulation">CONGRATULATION</string>
    <string name="you_are">YOU ARE</string>
    <string name="premium_member">PREMIUM MEMBER</string>
    <string name="ad_free">Ad free</string>
    <string name="_24_7_support">24/7 support</string>
    <string name="no_speed_limit">No speed limit</string>
    <string name="premium_location">Premium location</string>
    <string name="only">Only</string>
    <string name="_2_59_month">$2.59/Month</string>
    <string name="month">/Month</string>
    <string name="_3month">/3Month</string>
    <string name="_6month">/6Month</string>
    <string name="_1year">/1Year</string>
    <string name="help_to_improve_us_email_subject">Suggestions &amp; Comments</string>
    <string name="help_to_improve_us_body">Please write down your comments below this line.</string>


    <string name="purchases">Get Premium</string>
    <string name="share">Tell your friend</string>
    <string name="rate">Rate Us</string>
    <string name="about">About</string>
    <string name="help">Help us to improve</string>
    <string name="faq">FAQ</string>
    <string name="country_selection">Select Country</string>
    <string name="status">STATUS :</string>
    <string name="loading">Connecting</string>
    <string name="default_region">DEFAULT REGION</string>
    <string name="In_most_Android"><![CDATA[In most Android devices, open Android\'s Setting—>Battery-->Battery optimization, select All apps in the dropdown menu, find SuperVPN and set it to Don\'t optimize. In HuaWei devices, open Android\'s Setting-->Battery-->Launch, find SuperVPN in the app list, switch off to Manage manually, enable Auto-launch and Run in background.\n Or you can find battery setting in Protected Apps.\n In Samsung devices, open Android\'s Setting-->Battery-->App Power Saving-->Details, find SuperVPN in the app list and disabled it.\n In other devices, you may find it in Setting-->Battery as Background activity or Protected apps.]]></string>
    <string name="connection_time">Connection Time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_0_mbps">0 mbps</string>
    <string name="optimal_server">Optimal Server</string>
    <string name="go_premium">UNLOCK VIP SERVERS</string>
    <string name="go_pro_to_unlock_all_features">Watch Rewarded Video</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ad">Ad</string>
    <string name="select_country">Select Country</string>
    <string name="we_need_your_support">We need your support!</string>
    <string name="rate_us_5_stars">Rate us 5 stars</string>
    <string name="remind_me_later">REMIND ME LATER</string>
    <string name="Unknown_Server">Unknown Server</string>
    <string name="Servers">Servers</string>
    <string name="get_premium">GET PREMIUM</string>

    <!--FAQ QUESTION DETAILS -->
    <!--QUESTIONS-->
    <string name="question1">1. How to use VPN 365?</string>
    <string name="question2">2. How long can I use VPN 365 for each connection?</string>
    <string name="question3">3. Why "can't" I use internet after connection established?</string>
    <string name="question4">4. How to disable battery optimization for VPN 365?</string>
    <string name="question5">5. What is Smart Proxy?</string>
    <string name="question6">6. When I try to connect, Android system request a permission, but I can not accept it, why?</string>

    <!--ANSWERS-->
    <string name="question1_answer">Click connect button in the main screen to use VPN 365. If Android system show a dialog to request a connection permission, click OK or Accept to continue.</string>
    <string name="question2_answer">As long as you can. We don/t set time or traffic limition on each connection</string>
    <string name="question3_answer">Fist of all, check your network connection. Then make sure "you've" disabled battery optimization for VPN 365 in "Android's" battery setting (which means enable background activity for VPN 365). If you enable Smart Proxy, you also need to make sure all the apps you need to proxy is checked in Smart Proxy setting.</string>
    <string name="question5_answer">On Android 5.0 or above, you can only enable some of the apps to use VPN 365 to proxy traffic, and all the other apps use local network. For example, if Facebook and Skype are blocked in your country, make them checked in Smart Proxy. After the VPN connection is established, only Facebook and "Skype's" traffic go through VPN, and all your other apps will perform as good as usual.</string>
    <string name="question6_answer">You may be running some app which changes the screen color or opens a floating window. "Android's" security system prevent VPN to be running under these cases. You need close this kind of app temporarily to continue.</string>
    <!--END FAQ QUESTION DETAILS-->

    <!--    About us text details-->
    <string name="Aboutus_page_Text">VPN 365 and Security unblock Proxy is world best supervpn app its Super Secure VPN Unlimited Proxy Server for lifetime free access. Unlock any websites save your device
    Secure VPN is the most trusted security, privacy and access platform with top performance on speed, stability and security to unblock sites, unblock any apps or websites, access social networks, watch videos and movies, protect Wi-Fi hotspot security and protect privacy</string>
    <string name="exit">Exit</string>

    <string name="get_premium_now">GET PREMIUM NOW</string>
    <string name="got_premium">YOU ARE PREMIUM MEMBER</string>
    <string name="select_plan">Select Plan</string>


    <string name="buy_now">Buy Now</string>
    <string name="unlock">Unlock</string>
    <string name="united_kingdom">united kingdom</string>
    <string name="todo">TODO</string>
    <string name="vpn">VPN</string>
    <string name="Speed">Speed</string>
    <string name="date">date</string>
    <string name="wifi">wifi</string>
    <string name="mobile">mobile</string>
    <string name="total">total</string>
    <string name="mbps">MBps</string>
    <string name="kbps">kBps</string>
    <string name="megabyte_per_second">(megabyte per second)</string>
    <string name="kilobyte_per_second">(kilobyte per second)</string>

</resources>
