<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <include
        android:id="@+id/tool_bar_faq"
        layout="@layout/app_toolbar"
        android:visibility="visible"
        />


    <LinearLayout

        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />
        <LinearLayout
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="28sp"
                android:textColor="@color/white"
                android:text="@string/max_cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="28sp"
                android:layout_marginStart="@dimen/_6dp"
                android:textColor="@color/txt_gold"
                android:text="@string/premium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/congratulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="2dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/you_are"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/txt_gold"
            android:layout_marginTop="5dp"
            android:textSize="22sp"
            android:text="@string/premium_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</RelativeLayout>