<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android = "http://schemas.android.com/apk/res/android"
      xmlns:app = "http://schemas.android.com/apk/res-auto">
    <item
        android:id = "@+id/action_history"
        android:enabled = "true"
        android:icon = "@drawable/ic_history"
        android:title = "@string/history"
        app:showAsAction = "ifRoom" />

    <item
        android:id = "@+id/action_vpn"
        android:enabled = "true"
        android:icon = "@drawable/ic_vpn_key_black_24dp"
        android:title = "@string/vpn"
        app:showAsAction = "ifRoom" />
    <item
        android:id = "@+id/action_speed"
        android:enabled = "true"
        android:icon = "@drawable/ic_speed"
        android:title = "@string/Speed"
        app:showAsAction = "ifRoom" />

</menu>