<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:gravity="center"
        android:background="@drawable/background_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp">

        <RelativeLayout

            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/laterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/todo"
                android:paddingTop="10dp"
                android:src="@drawable/ic_close" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/img"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/app_ic_sup" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/text"
            android:gravity="center"
            android:layout_below="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tt"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:paddingLeft="10dp"
                android:fontFamily="@font/avalon"
                android:paddingRight="10dp"
                android:text="@string/rating_dialog"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ee"
                android:layout_below="@+id/tt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/avalon"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/we_need_your_support"
                android:textColor="@color/white"
                android:textSize="18sp"/>



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rela"
            android:layout_below="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:contentDescription="@string/todo"
                android:id="@+id/ic_rats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_ratings"
                />
            <ImageView
                android:contentDescription="@string/todo"
                android:id="@+id/ic_rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="46dp"
                android:maxWidth="46dp"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_alignEnd="@+id/ic_rats"
                android:src="@drawable/ic_cursor"
                android:layout_marginEnd="-28dp" />

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:layout_below="@id/rela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_rt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/main_btn_bg2"
                android:fontFamily="@font/avalon"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/rate_us_5_stars"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </RelativeLayout>




    </RelativeLayout>




</RelativeLayout>